--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,8 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "target": "ES2023",
-    "module": "ESNext",
-    "strict": true,
-    "moduleResolution": "bundler",
-    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
